--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -911,13 +911,20 @@
 												{
 													string publisherLimpio = publisher;
 													publisherLimpio = publisherLimpio.Replace(" ", null);
+													publisherLimpio = publisherLimpio.Replace("?", null);
 													publisherLimpio = publisherLimpio.ToLower();
+													publisherLimpio = publisherLimpio.Trim();
 
 													global::BaseDatos.Publishers.Publisher publisherFinal = global::BaseDatos.Publishers.Buscar.Id(publisherLimpio);
 
 													if (publisherFinal == null)
 													{
-														publisherFinal = global::BaseDatos.Publishers.Buscar.Acepcion(publisher);
+														publisherFinal = global::BaseDatos.Publishers.Buscar.Nombre(publisher.Trim());
+													}
+
+													if (publisherFinal == null)
+													{
+														publisherFinal = global::BaseDatos.Publishers.Buscar.Acepcion(publisher.Trim());
 													}
 
 													if (publisherFinal != null)
@@ -943,12 +950,23 @@
 													else
 													{
 														global::BaseDatos.Publishers.Publisher publisherFinal2 = new global::BaseDatos.Publishers.Publisher();
-														publisherFinal2.Id = null;
+														publisherFinal2.Id = publisherLimpio;
 														publisherFinal2.Nombre = publisher;
 
-														publishersFinales.Add(publisherFinal2);
+														if (publisherFinal2.Nombre.Contains("?") == true)
+														{
+															publisherFinal2.Nombre = publisherFinal2.Nombre.Replace("?", null);
+															publisherFinal2.Nombre = publisherFinal2.Nombre.Trim();
+														}
 
-														global::BaseDatos.Errores.Insertar.Mensaje("Publisher no encontrado", publisherFinal2.Nombre + " - " + juego.Nombre, "/game/" + juego.Id.ToString() + "/");
+														if (string.IsNullOrEmpty(publisherFinal2.Nombre) == false)
+														{
+															publisherFinal2.Nombre = publisherFinal2.Nombre + " (no check)";
+
+															publishersFinales.Add(publisherFinal2);
+
+															global::BaseDatos.Errores.Insertar.Mensaje("Publisher no encontrado", publisherFinal2.Nombre + " - " + juego.Nombre, "/game/" + juego.Id.ToString() + "/");
+														}
 													}
 												}
 
@@ -1140,36 +1158,15 @@
 
 				if (actualizarDatosAPI == true)
 				{
-					global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatos(juego.IdSteam.ToString());
-
-					if (nuevoJuego != null)
+					if (juego.IdSteam > 0)
 					{
-						if (juego.Imagenes.Library_600x900.Contains("i.imgur.com") == false)
+						global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatos(juego.IdSteam.ToString());
+
+						if (nuevoJuego != null)
 						{
-							juego.Imagenes.Library_600x900 = nuevoJuego.Imagenes.Library_600x900;
+							global::BaseDatos.Juegos.Actualizar.Media(nuevoJuego, juego);
 						}
-
-						if (juego.Imagenes.Library_1920x620.Contains("i.imgur.com") == false)
-						{
-							juego.Imagenes.Library_1920x620 = nuevoJuego.Imagenes.Library_1920x620;
-						}
-
-						if (juego.Imagenes.Logo.Contains("i.imgur.com") == false)
-						{
-							juego.Imagenes.Logo = nuevoJuego.Imagenes.Logo;
-						}
-
-						juego.Imagenes.Capsule_231x87 = nuevoJuego.Imagenes.Capsule_231x87;
-						juego.Imagenes.Header_460x215 = nuevoJuego.Imagenes.Header_460x215;
-
-						juego.Nombre = nuevoJuego.Nombre;
-						juego.Caracteristicas = nuevoJuego.Caracteristicas;
-						juego.Media = nuevoJuego.Media;
-						juego.Categorias = nuevoJuego.Categorias;
-						juego.Generos = nuevoJuego.Generos;
-
-						global::BaseDatos.Juegos.Actualizar.Media(juego);
-					}					
+					}
 				}
 			}
 		}
