--- a/pepeizqs deals web/Pages/publisher.cshtml
+++ b/pepeizqs deals web/Pages/publisher.cshtml
@@ -23,7 +23,7 @@
 
         if (string.IsNullOrEmpty(Model.publisher.Nombre) == false)
         {
-            titulo = Model.publisher.Nombre;        
+            titulo = Model.publisher.Nombre + " (" + Herramientas.Idiomas.CogerCadena(Model.idioma, "String5", "Publisher") + ")";        
         }       
     }
     else
