--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -11,6 +11,7 @@
     --fondoBotonHover: #105279;
     --fondoBotonPequeño: #0d1621;
     --fondoBotonPequeñoHover: #060a0f;
+    --fondoBotonPequeñoTransparente: rgba(13, 22, 33, 0.5);
     --colorTextoPeligro: #f04f5e;
     --colorTextoPeligroHover: #b91020;
     --colorTextoOscuro: #86aeef;
