--- a/pepeizqs deals web/Pages/publishers.cshtml
+++ b/pepeizqs deals web/Pages/publishers.cshtml
@@ -2,27 +2,42 @@
 @model pepeizqs_deals_web.Pages.publishersModel
 
 @{
-    ViewData["Title"] = "Publishers";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "String11", "Publisher");
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
 @if (Model.publishers != null)
 {
-    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr;">
-        @{
-            foreach (var publisher in Model.publishers)
-            {
-                string nombre = publisher.Nombre;
+    if (Model.publishers.Count > 0)
+    {
+        <h1 style="font-size: 23px;">
+            @Herramientas.Idiomas.CogerCadena(Model.idioma, "String11", "Publisher")
+        </h1>
 
-                if (string.IsNullOrEmpty(nombre) == true)
+        <hr />
+
+        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; margin-bottom: 20px; display: flex; align-items: center; gap: 15px;">
+            <i class="fa-solid fa-circle-info"></i>
+
+            @string.Format(Herramientas.Idiomas.CogerCadena(Model.idioma, "String12", "Publisher"), Model.publishers.Count.ToString())
+        </div>
+
+        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr;">
+            @{
+                foreach (var publisher in Model.publishers)
                 {
-                    nombre = "MIRAR --> " + publisher.Id;
-                }
+                    string nombre = publisher.Nombre;
 
-                <div>
-                    <a href="/publisher/@publisher.Id" target="_blank">@nombre</a>
-                </div>
+                    if (string.IsNullOrEmpty(nombre) == true)
+                    {
+                        nombre = "MIRAR --> " + publisher.Id;
+                    }
+
+                    <div>
+                        <a href="/publisher/@publisher.Id/" target="_blank">@nombre</a>
+                    </div>
+                }
             }
-        }
-    </div>
+        </div>
+    }
 }
